add more test cases

--- a/foundry.toml
+++ b/foundry.toml
@@ -10,3 +10,6 @@ fs_permissions = [
     { access = "read", path = "./reports" },
 ]
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
+[fuzz]
+runs = 1000
